--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,20 @@ buildscript {
   repositories {
     google()
     mavenCentral()
-    
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+
     jcenter {
       content {
         includeModule("org.jetbrains.trove4j", "trove4j")
       }
     }
   }
-
   dependencies {
     classpath "com.android.tools.build:gradle:4.1.2"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "org.jlleitschuh.gradle:ktlint-gradle:10.0.0"
   }
 }
 
@@ -29,6 +32,10 @@ allprojects {
       }
     }
   }
+}
+
+subprojects {
+  apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
 
 task clean(type: Delete) {
